# scrape

./: Cargo.toml  README.md  inference.py  things.csv  train.py
src/: analyze.rs  fetch.rs  main.rs  save.rs
