[package]
name = "scrape"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
kalosm = { version = "0.4.0", features = ["language"] }
rand = "0.9.1"
rayon = "1.10.0"
reqwest = "0.12.22"
rss = "2.0.12"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
